# Talk-to-Metabase-SB

./: .env.example  CARD_PARAMETERS_SUMMARY.md  COLLECTION_TOOLS.md  DEVELOPMENT.md  ENHANCED_CARD_PARAMETERS_SUMMARY.md  ENHANCED_DASHBOARD_PARAMETERS_SUMMARY.md  FULL-METABASE-OPENAPI.json  INSTALLATION.md  LICENSE  README.md  SPECIFICATIONS.md  TESTING.md  developer-guide.md  install.bat  install.sh  metabase-parameters-docs.md  metabase_mcp.py  metabase_visualization_settings_docs.md  metabase_viz_schema.json  pyproject.toml  requirements.txt  run_tests.sh  test_auth.py  test_card_parameters.py  test_enhanced_parameters.py  test_import.py  test_parameter_validation.py  test_size_limit.py
.deprecated/: MBQL_IMPLEMENTATION_SUMMARY.md
.github/workflows/: build.yml
dev_docs/: DASHBOARD_PARAMETERS_SUMMARY.md  card_filters_full_doc.md  card_filters_ui_graph.mermaid  card_filters_ui_options.md  mbql-documentation.md
docs/: Card filters api calls examples.csv  Cleaned examples.csv  dashboard_filters_documentation.md  parameters technical deep dive.md
supermetabase/: __init__.py  auth.py  client.py  config.py  errors.py  server.py
supermetabase/tools/: __init__.py  card.py  collection.py  dashboard.py  database.py  dataset.py  search.py
talk_to_metabase/: __init__.py  client.py  config.py  context_state.py  context_state_unused.py  metabase_guidelines.md  models.py  resources.py  server.py
talk_to_metabase/schemas/: area_visualization.json  area_visualization_docs.md  bar_visualization.json  bar_visualization_docs.md  card_parameters.json  (+39 more)
tests/: conftest.py
(+36 files in other folders)
